<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:inputType="textPersonName"
        android:textSize="18dp"
        android:gravity="center_horizontal"
        android:text="@string/input_text_view_password"/>

    <EditText
        android:id="@+id/input_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="#80bfb1b1">
        <Button
            android:id="@+id/button_cancel_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_gravity="left"
            android:background="?attr/selectableItemBackground"
            tools:text="@string/tools_button_cancel"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_ok_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="?attr/selectableItemBackground"
            android:text="@string/button_ok"
            android:layout_weight="1"
            tools:text="@string/tools_button_ok"/>
    </LinearLayout>
</LinearLayout>