<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/setting_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="12dp">

            <TextView
                android:id="@+id/settings_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/settings_item_1"
                android:textColor="@android:color/primary_text_light"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/settings_item_1_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_item_1"
                android:layout_marginTop="4dp"
                android:text="@string/settings_item_1_subtitle"
                android:textSize="14sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#80000000"/>

        <RelativeLayout
            android:id="@+id/setting_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="12dp">

            <TextView
                android:id="@+id/settings_item_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/settings_item_2"
                android:textColor="@android:color/primary_text_light"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_item_2"
                android:layout_marginTop="4dp"
                android:text="@string/settings_item_2_subtitle"
                android:textSize="14sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#80000000"/>

        <RelativeLayout
            android:id="@+id/setting_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="12dp">

            <TextView
                android:id="@+id/settings_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/settings_item_3"
                android:textColor="@android:color/primary_text_light"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_item_3"
                android:layout_marginTop="4dp"
                android:text="@string/settings_item_3_subtitle"
                android:textSize="14sp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/settings_item_3"
                android:checked="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#80000000"/>
    </LinearLayout>
</ScrollView>